--- a/app/src/main/res/drawable/login_edittext_bar.xml
+++ b/app/src/main/res/drawable/login_edittext_bar.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="false" android:state_selected="false">
-        <shape android:shape = "rectangle">
+    <item android:state_pressed="false" android:state_selected="false" android:state_enabled="false">
+        <shape android:shape = "rectangle" android:tint="@android:color/transparent">
             <stroke
                 android:width = "3dp">
             </stroke>
             <corners
-                android:radius="20dp"/>
+                android:radius="45sp"/>
         </shape>
     </item>
+
+<!--    <item android:state_pressed="true" android:state_focused="true" android:state_enabled="true">-->
+<!--        <shape android:shape = "rectangle" android:tint="@color/textEditTeal">-->
+<!--            <stroke-->
+<!--                android:width = "3dp">-->
+<!--            </stroke>-->
+<!--            <corners-->
+<!--                android:radius="100sp"/>-->
+<!--        </shape>-->
+<!--    </item>-->
 </selector>
