--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="blackBackgroundColor">#2C2F34</color>
+    <color name="blackBackgroundColor2">#181A1C</color>
+    <color name="blackCard">#252830</color>
+    <color name="matteBlack">#151515</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="matteWhite">#F5F0F0</color>
+    <color name="darkGrey">#303130</color>
+    <color name="darkGrey2">#3F3F3F</color>
+    <color name="lightGrey2">#7b7b7b</color>
+    <color name="darkGrey3">#21252a</color>
 
     <color name="lightPurple">#BE89FF</color>
     <color name="Purple">#FF6200EE</color>
     <color name="darkPurple">#FF3700B3</color>
+    <color name="darkModeViolet">#201a30</color>
     <color name="teal">#FF03DAC5</color>
+    <color name="someOtherTeal">#24E8D6</color>
     <color name="backgroundTeal">#00F1F4</color>
+    <color name="textEditPurple">#38304c</color>
     <color name="darkTeal">#FF018786</color>
     <color name="faintPurple">#8692F7</color>
     <color name="lightGrey">#DDDDDD</color>
+    <color name="orange">#FA9244</color>
+    <color name="red">#FF0000</color>
 
 </resources>
