--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,9 @@
     <dimen name="headerTextSize">25sp</dimen>
     <dimen name="loginTextSize">12sp</dimen>
     <dimen name="loginPageMargin">20dp</dimen>
+
+    <dimen name="exerciseSquareButtons">100dp</dimen>
+    <dimen name="gridLayoutMargin">27.5dp</dimen>
+    <dimen name="layoutMarginTopCategories">130dp</dimen>
+    <dimen name="inBetweenTopMargin">27.5dp</dimen>
 </resources>
