--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,19 @@
         <item name="colorPrimaryDark">@color/darkTeal</item>
         <item name="colorAccent">@color/backgroundTeal</item>
     </style>
+    <style name="CellStyle">
+        <item name="android:layout_marginTop">5sp</item>
+        <item name="android:layout_marginLeft">5sp</item>
+        <item name="android:background">@android:color/white</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="CellSpacerStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_marginLeft">5sp</item>
+        <item name="android:background">@android:color/white</item>
+    </style>
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
@@ -27,9 +40,43 @@
     </style>
 
     <style name="loginRegisterText" parent="parent">
+        <item name="android:minHeight">30sp</item>
+        <item name="android:textColor">@color/matteWhite</item>
         <item name="android:textSize">@dimen/loginTextSize</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:backgroundTint">@color/lightGrey</item>
+        <item name="android:background">@drawable/login_edittext_bar</item>
+    </style>
+
+    <style name="exercisesNumber">
+        <item name="android:layout_width">25dp</item>
+        <item name="android:layout_height">25dp</item>
+        <item name="android:background">@drawable/circular_frame</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:backgroundTint">@color/matteBlack</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:layout_gravity">bottom|right</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:layout_marginEnd">10dp</item>
+    </style>
+
+    <style name="exercisesCardView">
+        <item name ="android:layout_width">@dimen/exerciseSquareButtons</item>
+        <item name ="android:layout_height">@dimen/exerciseSquareButtons</item>
+        <item name ="android:background">@drawable/circular_frame</item>
+        <item name ="android:layout_marginEnd">10dp</item>
+        <item name ="android:layout_marginBottom">10dp</item>
+        <item name ="android:clickable">true</item>
+    </style>
+
+    <style name="exerciseCategoryText">
+        <item name ="android:layout_width">match_parent</item>
+        <item name ="android:layout_height">match_parent</item>
+        <item name ="android:layout_gravity">center</item>
+        <item name ="android:gravity">center</item>
+        <item name ="android:textColor">@color/matteBlack</item>
+        <item name ="android:textStyle">bold</item>
+        <item name ="android:alpha">0.75</item>
     </style>
 
 </resources>
