--- a/app/src/main/res/layout/indiv_exercise_temp_layout.xml
+++ b/app/src/main/res/layout/indiv_exercise_temp_layout.xml
@@ -6,6 +6,41 @@
     android:orientation="vertical"
     android:background="@color/blackBackgroundColor2">
 
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/workoutDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center_horizontal"
+        android:layout_marginBottom="20sp"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:cursorVisible="false"
+        android:clickable="false"
+        android:longClickable="false"
+        android:hint="WorkoutDate"
+        android:textColorHint="@color/matteWhite"
+        android:textColor="@color/matteWhite"/>
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/weightLifted"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center_horizontal"
+        android:layout_marginBottom="20sp"
+        android:hint="weightLifted"
+        android:textColorHint="@color/matteWhite"
+        android:textColor="@color/matteWhite"/>
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/numOfReps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center_horizontal"
+        android:layout_marginBottom="20sp"
+        android:hint="numOfReps"
+        android:textColorHint="@color/matteWhite"
+        android:textColor="@color/matteWhite"/>
+
     <TextView
         android:id="@+id/indivExerciseName"
         android:layout_width="wrap_content"
@@ -21,5 +56,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|center_horizontal"
         android:text="leaderboard"/>
+
+    <Button
+        android:id="@+id/addWorkout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:text="add workout"/>
+
 
 </LinearLayout>
