--- a/app/src/main/res/layout/indiv_exercise_temp_layout.xml
+++ b/app/src/main/res/layout/indiv_exercise_temp_layout.xml
@@ -21,6 +21,23 @@
         android:textColorHint="@color/matteWhite"
         android:textColor="@color/matteWhite"/>
 
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/workoutTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center_horizontal"
+        android:layout_marginBottom="20sp"
+        android:focusable="false"
+        android:inputType="time"
+        android:focusableInTouchMode="false"
+        android:cursorVisible="false"
+        android:clickable="false"
+        android:longClickable="false"
+        android:hint="WorkoutTime"
+        android:textColorHint="@color/matteWhite"
+        android:textColor="@color/matteWhite"/>
+
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/weightLifted"
         android:layout_width="wrap_content"
@@ -28,6 +45,7 @@
         android:layout_gravity="top|center_horizontal"
         android:layout_marginBottom="20sp"
         android:hint="weightLifted"
+        android:inputType="numberDecimal"
         android:textColorHint="@color/matteWhite"
         android:textColor="@color/matteWhite"/>
 
@@ -38,6 +56,7 @@
         android:layout_gravity="top|center_horizontal"
         android:layout_marginBottom="20sp"
         android:hint="numOfReps"
+        android:inputType="number"
         android:textColorHint="@color/matteWhite"
         android:textColor="@color/matteWhite"/>
 
