--- a/app/src/main/res/layout/category_activity.xml
+++ b/app/src/main/res/layout/category_activity.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/blackBackgroundColor"
-    tools:context=".CategoryActivity"
+    tools:context=".activities.CategoryActivity"
     android:orientation="vertical"
     android:gravity="center">
 
