--- a/app/src/main/res/layout/register_page_activity.xml
+++ b/app/src/main/res/layout/register_page_activity.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterPageActivity"
+    tools:context=".activities.RegisterPageActivity"
     android:background="@color/backgroundTeal"
     android:focusableInTouchMode="true"
     android:gravity="center"
