--- a/app/src/main/res/layout/leaderboard_layout.xml
+++ b/app/src/main/res/layout/leaderboard_layout.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blackBackgroundColor2"
-    tools:context=".LeaderboardActivity">
+    tools:context=".activities.LeaderboardActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,6 +29,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:background="@color/black"
                 android:src="@drawable/baseline_person_24"/>
 
             <TextView
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:text="Leaderboard"
                 android:textSize="30dp"
-                android:textColor="@color/matteWhite"
+                android:textColor="@color/black"
                 android:layout_gravity="center_horizontal"
                 android:textStyle="bold"
                 android:paddingBottom="10dp"/>
@@ -47,7 +47,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/leaderboardRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             />
 
     </LinearLayout>
