--- a/app/src/main/res/layout/leaderboard_layout.xml
+++ b/app/src/main/res/layout/leaderboard_layout.xml
@@ -7,6 +7,7 @@
     tools:context=".activities.LeaderboardActivity">
 
     <LinearLayout
+        android:id="@+id/leaderboardFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
