--- a/app/src/main/res/layout/fragment_workouts.xml
+++ b/app/src/main/res/layout/fragment_workouts.xml
@@ -4,106 +4,114 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blackBackgroundColor">
+    android:orientation="vertical"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:gravity="left"
+        android:layout_marginTop="35dp"
+        android:layout_marginLeft="10dp"
         android:text="Pick your"
-        android:textColor="@color/matteWhite"
+        android:textColor="@color/Purple"
+        android:textSize="20sp"
+        android:fontFamily="@font/poppins_regular"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textView"
         style="@style/headerText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="40sp"
         android:text="Category"
-        android:textColor="@color/matteWhite"
+        android:textSize="45sp"
+        android:textColor="@color/Purple"
+        android:fontFamily="@font/poppins_regular"
         app:layout_constraintBottom_toTopOf="@+id/appCompatTextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.513" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/appCompatTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="96dp"
-        android:gravity="left"
+        android:layout_marginLeft="10dp"
         android:text="Make muscles, not excuses"
-        android:textColor="@color/matteWhite"
+        android:fontFamily="@font/poppins_regular"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/categoryGrid"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.451" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <GridLayout
         android:id="@+id/categoryGrid"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="@dimen/layoutMarginTopCategories"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="185dp"
+        android:layout_marginStart="10sp"
+        android:layout_marginEnd="10sp"
+        android:layout_gravity="center_horizontal"
         android:columnCount="3"
         android:rowCount="3"
         android:useDefaultMargins="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.355">
-
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardViewAbs"
             style="@style/exercisesCardView"
-            app:cardBackgroundColor="@color/white"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             app:cardCornerRadius="30dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/abs"
+                android:scaleType="centerCrop"/>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/cardViewAbsText"
                 style="@style/exerciseCategoryText"
                 android:text="Abs"
-                android:textSize="25dp"
+                android:padding="5dp"
+                android:textColor="@color/white"
+                android:textSize="22dp"
                 />
-
-            <TextView
-                style="@style/exercisesNumber"
-                android:text="28" />
 
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardViewBack"
             style="@style/exercisesCardView"
-            app:cardBackgroundColor="@color/white"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             app:cardCornerRadius="30dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/back"
+                android:scaleType="centerCrop"/>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/cardViewBackText"
                 style="@style/exerciseCategoryText"
                 android:text="Back"
-                android:textSize="25dp" />
-
-            <TextView
-                style="@style/exercisesNumber"
-                android:text="25" />
+                android:padding="5dp"
+                android:textColor="@color/white"
+                android:textSize="22dp"/>
 
         </androidx.cardview.widget.CardView>
 
@@ -111,17 +119,24 @@
             android:id="@+id/cardViewBiceps"
             style="@style/exercisesCardView"
             app:cardBackgroundColor="@color/white"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             app:cardCornerRadius="30dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/biceps"
+                android:scaleType="centerCrop"/>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/cardViewBicepsText"
                 style="@style/exerciseCategoryText"
                 android:text="Biceps"
-                android:textSize="25dp" />
+                android:padding="5dp"
+                android:textColor="@color/white"
+                android:textSize="22dp" />
 
-            <TextView
-                style="@style/exercisesNumber"
-                android:text="24" />
 
         </androidx.cardview.widget.CardView>
 
@@ -129,17 +144,24 @@
             android:id="@+id/cardViewCalf"
             style="@style/exercisesCardView"
             app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="30dp">
+            app:cardCornerRadius="30dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/calf"
+                android:scaleType="centerCrop"/>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/cardViewCalfText"
                 style="@style/exerciseCategoryText"
                 android:text="Calf"
-                android:textSize="25dp" />
+                android:padding="5dp"
+                android:textColor="@color/white"
+                android:textSize="22dp" />
 
-            <TextView
-                style="@style/exercisesNumber"
-                android:text="9" />
 
         </androidx.cardview.widget.CardView>
 
@@ -147,18 +169,24 @@
             android:id="@+id/cardViewChest"
             style="@style/exercisesCardView"
             app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="30dp">
+            app:cardCornerRadius="30dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/chest"
+                android:scaleType="centerCrop"/>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/cardViewChestText"
                 style="@style/exerciseCategoryText"
                 android:text="Chest"
-                android:textSize="25dp" />
+                android:padding="5dp"
+                android:textColor="@color/white"
+                android:textSize="22dp" />
 
-
-            <TextView
-                style="@style/exercisesNumber"
-                android:text="37" />
 
         </androidx.cardview.widget.CardView>
 
@@ -166,18 +194,24 @@
             android:id="@+id/cardViewForearms"
             style="@style/exercisesCardView"
             app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="30dp">
+            app:cardCornerRadius="30dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/forearms"
+                android:scaleType="centerCrop"/>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/cardViewForearmsText"
                 style="@style/exerciseCategoryText"
                 android:text="Forearms"
-                android:textSize="20dp" />
+                android:padding="5dp"
+                android:textColor="@color/white"
+                android:textSize="22dp" />
 
-
-            <TextView
-                style="@style/exercisesNumber"
-                android:text="4" />
 
         </androidx.cardview.widget.CardView>
 
@@ -185,17 +219,24 @@
             android:id="@+id/cardViewLegs"
             style="@style/exercisesCardView"
             app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="30dp">
+            app:cardCornerRadius="30dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/legs"
+                android:scaleType="centerCrop"/>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/cardViewLegsText"
                 style="@style/exerciseCategoryText"
                 android:text="Legs"
-                android:textSize="25dp" />
+                android:padding="5dp"
+                android:textColor="@color/white"
+                android:textSize="22dp" />
 
-            <TextView
-                style="@style/exercisesNumber"
-                android:text="36" />
 
         </androidx.cardview.widget.CardView>
 
@@ -203,18 +244,24 @@
             android:id="@+id/cardViewShoulders"
             style="@style/exercisesCardView"
             app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="30dp">
+            app:cardCornerRadius="30dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/shoulders"
+                android:scaleType="centerCrop"/>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/cardViewShouldersText"
                 style="@style/exerciseCategoryText"
                 android:text="Shoulders"
-                android:textSize="20dp" />
+                android:padding="5dp"
+                android:textColor="@color/white"
+                android:textSize="22dp"/>
 
-
-            <TextView
-                style="@style/exercisesNumber"
-                android:text="28" />
 
         </androidx.cardview.widget.CardView>
 
@@ -222,18 +269,23 @@
             android:id="@+id/cardViewTriceps"
             style="@style/exercisesCardView"
             app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="30dp">
+            app:cardCornerRadius="30dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/triceps"
+                android:scaleType="centerCrop"/>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/cardViewTricepsText"
                 style="@style/exerciseCategoryText"
                 android:text="Triceps"
-                android:textSize="23dp" />
-
-
-            <TextView
-                style="@style/exercisesNumber"
-                android:text="23" />
+                android:padding="5dp"
+                android:textColor="@color/white"
+                android:textSize="22dp" />
 
         </androidx.cardview.widget.CardView>
 
