--- a/app/src/main/res/layout/individual_exercise.xml
+++ b/app/src/main/res/layout/individual_exercise.xml
@@ -75,6 +75,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            </androidx.viewpager2.widget.ViewPager2>
         </LinearLayout>
 
     </LinearLayout>
