--- a/app/src/main/res/layout/login_page_activity.xml
+++ b/app/src/main/res/layout/login_page_activity.xml
@@ -3,22 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkModeViolet"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <ImageView
         android:id="@+id/appTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="90sp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:gravity="center"
-        android:text="RIGID BODY"
-        android:textColor="@color/white"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        android:layout_marginStart="20sp"
-        android:layout_marginEnd="20sp"
-        app:fontFamily="@font/montserrat"
+        android:src="@drawable/rigidbody"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,73 +23,73 @@
         android:id="@+id/tagline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/appTitle"
-        android:layout_marginTop="7sp"
-        android:text="Make muscles, Not excuses"
-        android:textSize="20sp"
-        android:textColor="@color/lightGrey2"
+        android:fontFamily="@font/poppins_regular"
         android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:fontFamily="@font/montserrat_light" />
+        android:text="Make muscles, Not excuses"
+        android:textColor="@color/lightGrey2"
+        android:textSize="15sp"
+        app:layout_constraintTop_toBottomOf="@id/appTitle"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/tagline"
-        android:layout_marginTop="20sp"
         android:orientation="vertical"
-        android:padding="30sp">
+        app:layout_constraintTop_toBottomOf="@+id/tagline">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/poppins_regular"
             android:gravity="start"
-            android:fontFamily="@font/montserrat_light"
-            android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@id/tagline"
+            android:paddingLeft="40dp"
+            android:text="Login"
+            android:textColor="@color/darkGrey2"
+            android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="0sp"
-            android:textSize="25sp"
-            android:textStyle="bold">
+            app:layout_constraintTop_toBottomOf="@id/tagline">
         </androidx.appcompat.widget.AppCompatTextView>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputUsername"
             style="@style/parent"
-            android:layout_marginTop="8dp"
-            app:boxStrokeWidth="0sp"
-            android:textColorHint="@color/lightGrey2">
-
+            android:layout_marginTop="10dp"
+            android:paddingLeft="30sp"
+            android:paddingRight="30sp"
+            android:textColorHint="@color/lightGrey2"
+            app:boxStrokeWidth="0sp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/username"
                 style="@style/loginRegisterText"
+                android:drawablePadding="10sp"
+                android:fontFamily="@font/poppins_regular"
                 android:hint="USERNAME"
-                android:fontFamily="@font/montserrat"
-                android:drawablePadding="8sp"
                 android:inputType="text"
                 android:maxLines="1"
-                android:textSize="13sp" />
+                android:textSize="13sp"
+                android:textColor="@color/black"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputPassword"
             style="@style/parent"
-            app:hintAnimationEnabled="false"
+            android:paddingLeft="30sp"
+            android:paddingRight="30sp"
+            android:textColorHint="@color/lightGrey2"
             app:boxStrokeWidth="0sp"
-            android:layout_marginTop="20dp"
-            android:textColorHint="@color/lightGrey2">
+            app:hintAnimationEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password"
                 style="@style/loginRegisterText"
+                android:fontFamily="@font/poppins_regular"
                 android:hint="PASSWORD"
-                android:fontFamily="@font/montserrat"
                 android:inputType="textPassword"
                 android:maxLines="1"
-                android:textSize="13sp" />
+                android:textSize="13sp"
+                android:textColor="@color/black"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
@@ -101,14 +97,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:minWidth="200sp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/login_edittext_bar"
-            android:backgroundTint="@color/someOtherTeal"
+            android:backgroundTint="@color/teal"
+            android:minWidth="150dp"
             android:onClick="onLoginClick"
-            android:padding="8dp"
+            android:padding="1dp"
             android:text="Login"
-            android:textColor="@color/darkModeViolet"
+            android:textColor="@color/black"
             app:initialCornerAngle="27dp"
             app:spinning_bar_color="@color/white"
             app:spinning_bar_padding="2dp"
@@ -117,55 +113,52 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Forgot Password?"
-            android:textColor="@color/someOtherTeal"
-            android:fontFamily="@font/montserrat_light"
-            android:textSize="15sp"
+            android:layout_marginTop="6sp"
+            android:fontFamily="@font/poppins_regular"
             android:gravity="center"
-            android:layout_marginTop="6sp"/>
-
+            android:text="Forgot Password?"
+            android:textStyle="bold|italic"
+            android:textColor="@color/teal"
+            android:textSize="13sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="40sp"
-            android:gravity="center">
+            android:layout_marginTop="30sp"
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/registerButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:height="48dp"
+                android:layout_gravity="bottom"
+                android:height="20dp"
+                android:fontFamily="@font/poppins_regular"
+                android:gravity="center"
                 android:onClick="onRegisterClick"
                 android:text="Don't have an account?"
-                android:fontFamily="@font/montserrat_light"
                 android:textAlignment="center"
-                android:layout_gravity="bottom"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:textColor="@color/lightGrey2"
-                android:textSize="17sp" />
+                android:textColor="@color/darkGrey2"
+                android:textSize="13sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat_light"
                 android:layout_marginStart="5sp"
+                android:height="20dp"
+                android:fontFamily="@font/poppins_regular"
                 android:onClick="onRegisterClick"
                 android:text="Sign up"
-                android:textColor="@color/someOtherTeal"
-                android:textSize="17sp"
-                android:textStyle="bold">
+                android:textColor="@color/teal"
+                android:textSize="13sp"
+                android:textStyle="bold|italic">
+
             </TextView>
 
         </LinearLayout>
 
     </LinearLayout>
-
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
