--- a/app/src/main/res/layout/register_page_activity.xml
+++ b/app/src/main/res/layout/register_page_activity.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.RegisterPageActivity"
-    android:background="@color/backgroundTeal"
+    android:background="@color/white"
     android:focusableInTouchMode="true"
     android:gravity="center"
     android:layout_gravity="center">
@@ -15,90 +14,119 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="20dp"
             android:layout_marginTop="30dp">
-            <RelativeLayout
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
                     style="@style/headerText"
+                    android:fontFamily="@font/poppins_regular"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginLeft="7dp"
-                    android:layout_marginTop="41dp"
-                    android:text="@string/register_nbelow_n"
-                    android:textColor="@color/white" />
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="65dp"
+                    android:text="@string/register_nbelow"
+                    android:gravity="left|center"
+                    android:textColor="@color/black" />
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_login_hero"
+                    android:layout_width="220dp"
+                    android:layout_height="220dp"
+                    android:src="@drawable/rigidbody"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"/>
-            </RelativeLayout>
+            </LinearLayout>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="10dp">
+                android:layout_marginTop="30dp"
+                app:cardBackgroundColor="@color/matteWhite"
+                app:cardCornerRadius="20dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_margin="20dp"
                     android:orientation="vertical">
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputName"
                         style="@style/parent"
-                        android:layout_marginTop="20dp">
+                        android:textColorHint="@color/black"
+                        android:layout_marginTop="2dp"
+                        app:boxStrokeWidth="0sp">
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/registerName"
                             style="@style/loginRegisterText"
+                            android:fontFamily="@font/poppins_regular"
+                            android:drawablePadding="10sp"
                             android:inputType="textPersonName"
                             android:maxLines="1"
-                            android:hint="@string/name"/>
+                            android:textSize="13sp"
+                            android:hint="@string/name"
+                            android:textColor="@color/black"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputEmail"
                         style="@style/parent"
-                        android:layout_marginTop="20dp">
+                        android:layout_marginTop="2dp"
+                        android:textColorHint="@color/black"
+                        app:boxStrokeWidth="0sp">
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/registerEmail"
                             style="@style/loginRegisterText"
                             android:inputType="textEmailAddress"
+                            android:fontFamily="@font/poppins_regular"
+                            android:drawablePadding="10sp"
                             android:maxLines="1"
-                            android:hint="@string/email"/>
+                            android:textSize="13sp"
+                            android:hint="@string/email"
+                            android:textColor="@color/black"/>
                     </com.google.android.material.textfield.TextInputLayout>
+
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputMobile"
                         style="@style/parent"
-                        android:layout_marginTop="20dp">
+                        android:layout_marginTop="2dp"
+                        android:textColorHint="@color/black"
+                        app:boxStrokeWidth="0sp">
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/registerMobile"
                             style="@style/loginRegisterText"
+                            android:fontFamily="@font/poppins_regular"
+                            android:drawablePadding="10sp"
                             android:inputType="phone"
+                            android:textSize="13sp"
                             android:maxLines="1"
-                            android:hint="@string/mobile_number"/>
+                            android:hint="@string/mobile_number"
+                            android:textColor="@color/black"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputPassword"
                         style="@style/parent"
-                        android:layout_marginTop="20dp">
+                        android:layout_marginTop="2dp"
+                        android:textColorHint="@color/black"
+                        app:boxStrokeWidth="0sp">
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/registerPassword"
                             style="@style/loginRegisterText"
+                            android:fontFamily="@font/poppins_regular"
+                            android:drawablePadding="10sp"
                             android:hint="@string/password"
                             android:maxLines="1"
-                            android:inputType="textPassword"/>
+                            android:textSize="13sp"
+                            android:inputType="textPassword"
+                            android:textColor="@color/black"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
@@ -106,13 +134,14 @@
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:background="@drawable/login_edittext_bar"
+                        android:minWidth="150dp"
                         app:spinning_bar_width="6dp"
                         app:spinning_bar_color="@color/white"
                         android:text="@string/register"
                         android:textColor="@color/black"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="20dp"
-                        android:backgroundTint="@color/backgroundTeal"
+                        android:backgroundTint="@color/teal"
                         app:initialCornerAngle="27dp"
                         app:spinning_bar_padding="2dp" />
 
@@ -120,17 +149,20 @@
                         style="@style/parent"
                         android:textAlignment="center"
                         android:textStyle="bold"
-                        android:height="48dp"
-                        android:textColor="@color/black"
-                        android:textSize="17sp"
+                        android:height="30dp"
+                        android:gravity="center"
+                        android:textColor="@color/darkGrey"
+                        android:textSize="13sp"
                         android:text="@string/already_have_an_account"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="40dp"
                         android:onClick="onLoginClick"/>
 
                 </LinearLayout>
+
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
+
     </ScrollView>
 
-</RelativeLayout>
+</LinearLayout>
