--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,12 @@
 <resources>
     <!--  Base application theme.  -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!--  Customize your theme here.  -->
         <item name="colorPrimary">@color/teal</item>
-        <item name="colorPrimaryDark">@color/darkTeal</item>
-        <item name="colorAccent">@color/backgroundTeal</item>
+        <item name="colorPrimaryDark">@color/cardview_dark_background</item>
+        <item name="colorAccent">@color/black</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
     <style name="CellStyle">
         <item name="android:layout_marginTop">5sp</item>
