--- a/app/src/main/res/layout/list_item_friend.xml
+++ b/app/src/main/res/layout/list_item_friend.xml
@@ -30,6 +30,7 @@
             android:text="Username" />
 
         <TextView
+            android:id="@+id/userIdTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
