--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -14,28 +14,6 @@
         android:layout_marginTop="80sp"
         android:padding="1dp" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/friendId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/addFriendButton"
-        android:hint="ID number here"
-        android:textColorHint="@color/matteWhite"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-    </com.google.android.material.textfield.TextInputEditText>
-
-    <Button
-        android:id="@+id/addFriendButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="Add friend">
-    </Button>
-
 
     <TextView
         android:id="@+id/text_friends"
@@ -46,6 +24,23 @@
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
         android:textSize="20sp" />
+
+
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="75sp">
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/addFriendFloatingButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_gravity="bottom|right"
+            android:text="ADD FRIEND"
+            app:icon="@android:drawable/ic_input_add"/>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 
 
 
